--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,30 @@
 * {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
 }
 .image-container {
   width: 100%;
   display: flex;
   justify-content: center;
 }
-#resto-pic {
-  width: 50%;
+#resto-pic,
+.food-images {
+  width: 100%;
   height: auto;
   margin: auto;
 }
 
-h1 {
+.middle-title,
+.description {
   text-align: center;
+}
+li {
+  margin: 1%;
+}
+
+#recipe-list {
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
